--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,3 +2,14 @@
     margin:0px;
     padding:0px;
 }
+h1{
+    color: blue;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: lightgreen;
+    text-align:center
+}
+p{
+    text-align: justify;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.5em;
+}
